# Exec-Agent

./: .gitignore  README.md  executive_daily_briefing_email_agent_guide.md  planning.md  pyproject.toml
.github/workflows/: briefing.yml
brief_agent/: __init__.py  __main__.py  agent_runner.py  config.py  schema.py
brief_agent/brief_agent/: schema.py
brief_agent/tools/: __init__.py  calendar.py  calendar_ms.py  market.py  news.py  weather.py
brief_agent/tools/brief_agent/tools/: news.py
brief_agent/utils/: __init__.py  emailer.py  formatter.py  scheduler.py
tests/: conftest.py  test_calendar_ms.py  test_market.py  test_market_mock.py  test_news.py  test_weather.py
