[tool.poetry]
name = "brief-agent"
version = "0.1.0"
description = "Executive Daily Briefing Email Agent"
authors = ["Derek Sheerin <derek.sheerin@gmail.com>"]
packages = [
    { include = "brief_agent" }
]

[tool.poetry.dependencies]
python = ">=3.12"
openai = "^1.75.0"
msal = "^1.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
